# flake8

./: .appveyor.yml  .bandit.yml  .coveragerc  .gitignore  .gitlab-ci.yml  .hgignore  .hgtags  .mailmap  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  CONTRIBUTORS.txt  DESIGN.rst  LICENSE  MANIFEST.in  README  README.rst  Readme.md  Super bot  codecov.yml  dev-requirements.txt  example.py  pytest.ini  run_tests.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: 01_bug.yml  02_feature.yml  config.yml
.github/workflows/: main.yml
docs/: api.rst  buildout.rst  conf.py  config.rst  extensions.rst  index.rst  setuptools.rst  vcs.rst  warnings.rst
docs/source/: conf.py  faq.rst  glossary.rst  index.rst  manpage.rst  requirements.txt
docs/source/dev/: cross_compatibility.rst  formatters.rst  index.rst  plugin_parameters.rst  registering_plugins.rst
docs/source/internal/: checker.rst  cli.rst  contributing.rst  formatters.rst  index.rst  option_handling.rst  plugin_handling.rst  releases.rst  start-to-finish.rst  utils.rst  writing-code.rst  writing-documentation.rst
docs/source/plugin-development/: checkers.rst  cross-compatibility.rst  formatters.rst  getting-started.rst  index.rst  plugin-parameters.rst  plugin-types.rst  registering-plugins.rst  testing-plugins.rst
docs/source/release-notes/: 0.6.0.rst  0.7.0.rst  0.8.0.rst  0.9.0.rst  1.0.0.rst  1.1.0.rst  1.2.0.rst  1.3.0.rst  1.3.1.rst  1.4.0.rst  1.5.0.rst  1.6.0.rst  1.6.1.rst  1.6.2.rst  1.7.0.rst  2.0.0.rst  2.1.0.rst  2.2.0.rst  2.2.1.rst  2.2.2.rst  2.2.3.rst  2.2.4.rst  2.2.5.rst  2.3.0.rst  2.4.0.rst  2.4.1.rst  2.5.0.rst  2.5.1.rst  2.5.2.rst  2.5.3.rst  2.5.4.rst  2.5.5.rst  2.6.0.rst  2.6.1.rst  2.6.2.rst  3.0.0.rst  3.0.1.rst  3.0.2.rst  3.0.3.rst  3.0.4.rst  (+43 more)
docs/source/user/: configuration.rst  error-codes.rst  ignoring-errors.rst  index.rst  invocation.rst  options.rst  python-api.rst  using-hooks.rst  using-plugins.rst  violations.rst
example-plugin/: setup.py
example-plugin/src/flake8_example_plugin/: __init__.py  off_by_default.py  on_by_default.py
flake8/: __init__.py  __main__.py  _pyflakes.py  _trie.py  api.py  checker.py  compat.py  defaults.py  engine.py  exceptions.py  flake8  hooks.py  main.py  mccabe.py  messages.py  notifier.py  option_parser.py  pep8.py  processor.py  pyflakes.py  reporter.py  run.py  style_guide.py  util.py  utils.py
flake8/api/: git.py
flake8/formatting/: base.py  default.py
flake8/main/: application.py  cli.py  git.py  mercurial.py  options.py  vcs.py
flake8/options/: aggregator.py  config.py  manager.py
flake8/plugins/: manager.py  notifier.py  pyflakes.py
flake8/scripts/: flake8.py
flake8/test/: harness.py  test_imports.py  test_other.py  test_script.py  test_undefined_names.py
flake8/tests/: _test_warnings.py  test_engine.py  test_flakes.py  test_git_hook.py  test_hooks.py  test_integration.py  test_main.py  test_mccabe.py  test_pyflakes.py  test_util.py  test_warnings.py  toast_warnings.py
old/: setup.py  tox.ini
old/docs/: changes.rst  conf.py  extensions.rst  index.rst  setuptools.rst
old/flake8/: __init__.py  _pyflakes.py  callbacks.py  hooks.py  run.py
old/flake8/tests/: _test_warnings.py  test_engine.py  test_integration.py  test_reporter.py
scripts/: flake8.cmd
src/flake8/: __init__.py  _compat.py  cacher.py  checker.py  defaults.py  discover_files.py  exceptions.py  processor.py  statistics.py  style_guide.py  testing.py  utils.py  violation.py
src/flake8/api/: legacy.py  style_guide.py
src/flake8/formatting/: base.py  default.py
src/flake8/main/: application.py  breezy.py  cli.py  debug.py  git.py  mercurial.py  options.py  setuptools_command.py  vcs.py
src/flake8/options/: aggregator.py  config.py  manager.py  parse_args.py
src/flake8/plugins/: _trie.py  finder.py  manager.py  notifier.py  pycodestyle.py  pyflakes.py  reporter.py
tests/: __init__.py  conftest.py  test_notifier.py  test_trie.py
tests/fixtures/config_files/: README.rst  append-config.ini  broken-pyproject.toml  broken.ini  cli-specified-pyproject.toml  cli-specified-with-inline-comments.ini  cli-specified-without-inline-comments.ini  cli-specified.ini  config-with-hyphenated-options.ini  local-config.ini  local-plugin-duplicate-entry-point.ini  local-plugin-path.ini  local-plugin.ini  no-flake8-section-pyproject.toml  no-flake8-section.ini  prepend-config.ini  user-config.ini
tests/fixtures/diffs/: multi_file_diff  single_file_diff  two_file_diff
tests/fixtures/example-code/: invalid-syntax.py
tests/fixtures/example-code/inline-ignores/: E501.py  E731.py
tests/integration/: test_aggregator.py  test_api_legacy.py  test_checker.py  test_main.py  test_plugins.py
tests/integration/subdir/: aplugin.py
tests/unit/: conftest.py  test_application.py  test_base_formatter.py  test_checker_manager.py  test_config_file_finder.py  test_config_parser.py  test_debug.py  test_decision_engine.py  test_defaults.py  test_discover_files.py  test_exceptions.py  test_file_checker.py  test_file_processor.py  test_filenameonly_formatter.py  test_get_local_plugins.py  test_git.py  test_legacy_api.py  test_main_options.py  test_merged_config_parser.py  test_nothing_formatter.py  test_notifier.py  test_option.py  test_option_manager.py  test_options_config.py  test_plugin.py  test_plugin_manager.py  test_plugin_type_manager.py  test_pyflakes_codes.py  test_setuptools_command.py  test_statistics.py  test_style_guide.py  test_trie.py  test_utils.py  test_violation.py
tests/unit/plugins/: finder_test.py  pycodestyle_test.py  reporter_test.py
