[metadata]
name = flake8
version = attr: flake8.__version__
description = the modular source code checker: pep8 pyflakes and co
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pycqa/flake8
author = Tarek Ziade
author_email = tarek@ziade.org
maintainer = Ian Stapleton Cordasco
maintainer_email = graffatcolmingov@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
install_requires =
    mccabe>=0.7.0,<0.8.0
    pycodestyle>=2.13.0,<2.14.0
    pyflakes>=3.3.0,<3.4.0
python_requires = >=3.9
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flake8 = flake8.main.cli:main
flake8.extension =
    F = flake8.plugins.pyflakes:FlakesChecker
    E = flake8.plugins.pycodestyle:pycodestyle_logical
    W = flake8.plugins.pycodestyle:pycodestyle_physical
flake8.report =
    default = flake8.formatting.default:Default
    pylint = flake8.formatting.default:Pylint
    quiet-filename = flake8.formatting.default:FilenameOnly
    quiet-nothing = flake8.formatting.default:Nothing

[bdist_wheel]
universal = 1

[coverage:run]
source =
    flake8
    tests
plugins = covdefaults

[coverage:report]
fail_under = 97

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
